tests/should-fail/flags/shadowing-3.j
// TODO: this check is now obsolete
function foo takes integer i returns nothing
    local integer i
endfunction
